<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SecondFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userNameStr"
        app:layout_constraintBottom_toTopOf="@id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/userGenderLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLabel"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/userGenderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userGenderStr"
        app:layout_constraintBottom_toTopOf="@id/userGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/userGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/userAgeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userGenderLabel"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/userAgeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userAgeStr"
        app:layout_constraintBottom_toTopOf="@id/userAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userGender"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/userAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userAgeLabel"
        android:textSize="24sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>